created a html table to get info. still working on getting the php file to add to the existing table

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ Welcome to IT 202 Ex
 <p> stuff to put blablabal </p>
 <p> more stuff and alskdalsd 
 
+<a href="enterinfo.html"> Come here to enter your info</a>
 
 </p>
 </body>
