--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-Welcome to IT 202 Ex
+<meta char-set="utf-8">
+<title>Login Page</title>
 </head>
 <body>
-<H1> Julio Torres Test Site </H1>
-<p> stuff to put blablabal </p>
-<p> more stuff and alskdalsd 
-
-<a href="enterinfo.html"> Come here to enter your info</a>
-
-</p>
+<h1>Login here</h1>
+<form action="rpc.php" method="post" >
+<p>username: <input type="text" name="username" /></p>
+<p>password: <input type ="password" name="password" /></p>
+<input type="submit" name="request" value="login"/> 
+</form>
+<a href = "register.html">Register Here</a>
 </body>
 </html>
+
