--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
 <body>
 <form action="rpc.php" method="post" >
 <p>username: <input type="text" name="username" /></p>
-<p>password: <input type ="text" name="password" /></p>
+<p>password: <input type ="password" name="password" /></p>
 <input type="submit" name="request" value="register"/>
 </form>
 <a href = "index.html">Login Here</a>
