the request_once works again lul yup

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <p>password: <input type ="password" name="password" /></p>
 <input type="submit" name="request" value="login"/> 
 </form>
+<form action="browse.php" method="post">
+<input type="submit" name="request" value="browse"/>
+</form>
 <a href = "register.html">Register Here</a>
 </body>
 </html>
