--- a/register.html
+++ b/register.html
@@ -5,9 +5,10 @@
 <title>Register Page</title>
 </head>
 <body>
+<h1> Register Here </h1>
 <form action="rpc.php" method="post" >
 <p>username: <input type="text" name="username" /></p>
-<p>password: <input type ="password" name="password" /></p>
+<p>password: <input type ="text" name="password" /></p>
 <input type="submit" name="request" value="register"/>
 </form>
 <a href = "index.html">Login Here</a>
