Got all of the deliverables done now to make it look pretty

--- a/browse.html
+++ b/browse.html
@@ -1,16 +1,83 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta char-set="utf-8">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Our Products</title>
+<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Torres Vape</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="browse.html">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="orders.html">Orders</a></li>
+       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.html">Login</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
+<div id = "main">
 <h1>View Our Products here</h1>
-<form action="browse.php" method="post" >
-<p>Insert a tag for search: <input type="text" name="tags" /></p>
-<input type="submit" name="request" value="search" />
-<input type="submit" name="request" value="browse all"/> 
-</form>
-<a href= "orders.html"> Make an order </a>
+
+<p>Insert a tag for search: <input type="text" id="tags" /></p>
+<button type="button" onclick="sendRequestBrowse()">Browse All</button>
+<button type="button" onclick="sendRequestTags()">Search Tags</button>
+</div>
+
+<div id="output"></div>
+
+<script>
+var request;
+
+function sendRequestTags()
+{
+	var tags = document.getElementById("tags").value;
+	request = new XMLHttpRequest();
+	request.onreadystatechange = handleResponse;
+	request.open("POST","browse.php",true);
+	request.setRequestHeader("Content-type","application/json");
+	var data = JSON.stringify({request:"search",tags:tags});
+	request.send(data);
+}
+
+function sendRequestBrowse()
+{
+	request = new XMLHttpRequest();
+	request.onreadystatechange = handleResponse;
+	request.open("POST","browse.php",true);
+	request.setRequestHeader("Content-type","application/json");
+	var data = JSON.stringify({request:"browse all"});
+	request.send(data);
+}
+
+function handleResponse()
+{
+	document.getElementById("output").innerHTML = request.responseText;
+}
+</script>
+
 </body>
 </html>
 
