--- a/orders.html
+++ b/orders.html
@@ -1,19 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta char-set="utf-8">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Order page</title>
+<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Make an order</h1>
-<form action="browse.php" method="post" >
-<p>Name: <input type="text" name="name" /></p>
-<p>Address: <input type ="text" name="address" /></p>
-<p>Item Name: <input type ="text" name="productName" /></p>
-<input type="submit" name="request" value="order"/> 
-</form>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-<a href = "register.html">Register Here</a>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Torres Vape</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="browse.html">Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="orders.html">Orders</a></li>
+       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.html">Login</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<h1>Make an Order</h1>
+<p>Name: <input type="text" id="name" /></p>
+<p>Address: <input type ="text" id="address" /></p>
+<p>Item Name: <input type ="text" id="productName" /></p>
+<button type="button" onclick="sendRequestOrder()">Order</button>
+<button type="button" onclick="sendRequestView()">View Orders</button>
+
+
+<div id="output"></div>
+
+<script>
+var request;
+function sendRequestOrder()
+{
+	var name = document.getElementById("name").value;
+	var address = document.getElementById("address").value;
+	var productName = document.getElementById("productName").value;
+	request = new XMLHttpRequest();
+	request.onreadystatechange = handleResponse;
+	request.open("POST","browse.php",true);
+	request.setRequestHeader("Content-type","application/json");
+	var data = JSON.stringify({request:"order",name:name,address:address,productName:productName});
+	request.send(data);
+}
+
+function sendRequestView()
+{
+	request = new XMLHttpRequest();
+	request.onreadystatechange = handleResponse;
+	request.open("POST","browse.php",true);
+	request.setRequestHeader("Content-type","application/json");
+	var data = JSON.stringify({request:"view"});
+	request.send(data);
+}
+
+function handleResponse()
+{
+	document.getElementById("output").innerHTML = request.responseText;
+}
+</script>
+
 </body>
 </html>
 
