--- a/browse.html
+++ b/browse.html
@@ -5,48 +5,74 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Our Products</title>
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Torres Vape</a>
+      <a class="navbar-brand" href="index.html">Torres Vape</a>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="browse.html">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="orders.html">Orders</a></li>
-       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">Login</a></li>
-        <li><a href="register.html">Register</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="browse.html">Browse</a></li>
+        <li><a href="orders.html">Order</a></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="register.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
 
+<div class="jumbotron" style="background-image:url('imageedit_1_7549154140.jpg');">
 
-<div id = "main">
+</div>
+
+<div class = "container">
+
+
+
+
+
+
 <h1>View Our Products here</h1>
 
 <p>Insert a tag for search: <input type="text" id="tags" /></p>
 <button type="button" onclick="sendRequestBrowse()">Browse All</button>
 <button type="button" onclick="sendRequestTags()">Search Tags</button>
+
+
+<div class = "row">
+  <div class = "col-md-6">
+  
+  <div id="output1"></div>
+
+  </div>
+  <div class = "col-md-6">
+  <h2> Search for something specific if you'd like.</h2>
+  
+  <div id="output2"></div>
+  
+  </div>
+
+
+</div>
 </div>
 
-<div id="output"></div>
+
+
+
+
 
 <script>
 var request;
@@ -55,7 +81,7 @@ function sendRequestTags()
 {
 	var tags = document.getElementById("tags").value;
 	request = new XMLHttpRequest();
-	request.onreadystatechange = handleResponse;
+	request.onreadystatechange = handleResponse1;
 	request.open("POST","browse.php",true);
 	request.setRequestHeader("Content-type","application/json");
 	var data = JSON.stringify({request:"search",tags:tags});
@@ -65,19 +91,24 @@ function sendRequestTags()
 function sendRequestBrowse()
 {
 	request = new XMLHttpRequest();
-	request.onreadystatechange = handleResponse;
+	request.onreadystatechange = handleResponse2;
 	request.open("POST","browse.php",true);
 	request.setRequestHeader("Content-type","application/json");
 	var data = JSON.stringify({request:"browse all"});
 	request.send(data);
 }
 
-function handleResponse()
+function handleResponse1()
 {
-	document.getElementById("output").innerHTML = request.responseText;
+	document.getElementById("output2").innerHTML = request.responseText;
+}
+
+function handleResponse2()
+{
+	document.getElementById("output1").innerHTML = request.responseText;
 }
 </script>
-
+</div>
 </body>
 </html>
 
