--- a/orders.html
+++ b/orders.html
@@ -5,38 +5,40 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Order page</title>
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Torres Vape</a>
+      <a class="navbar-brand" href="index.html">Torres Vape</a>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="browse.html">Home <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="orders.html">Orders</a></li>
-       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">Login</a></li>
-        <li><a href="register.html">Register</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="browse.html">Browse</a></li>
+        <li class="active"><a href="orders.html">Order</a></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="register.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
 
+<div class="jumbotron" style="background-image:url('imageedit_1_7549154140.jpg');">
+
+</div>
+
+<div class = "container">
 <h1>Make an Order</h1>
 <p>Name: <input type="text" id="name" /></p>
 <p>Address: <input type ="text" id="address" /></p>
@@ -44,8 +46,8 @@
 <button type="button" onclick="sendRequestOrder()">Order</button>
 <button type="button" onclick="sendRequestView()">View Orders</button>
 
-
 <div id="output"></div>
+
 
 <script>
 var request;
@@ -77,7 +79,7 @@ function handleResponse()
 	document.getElementById("output").innerHTML = request.responseText;
 }
 </script>
-
+</div>
 </body>
 </html>
 
